# ocean-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.toml
include/: buffers.h  camera.h  constants.h  fft.h  logger.h  ocean.h  resourceLoader.h  resourceManager.h  shader.h  shaderException.h  skybox.h  texture.h  textureStorage.h  window.h
include/core/: Application.h  Constants.h  Input.h  Ocean.h  ResourceLoader.h  Window.h
include/graphics/: Camera.h  EBuffer.h  Shader.h  ShaderException.h  Skybox.h  Texture.h  TextureException.h  VArray.h  VBuffer.h
include/logger/: Logger.h
libs/glad/include/GLAD/: gl.h
libs/include/: glfft_gl_api_headers.hpp
shaders/: butterfly_cs.glsl  h_0_k.cs  h_0_k_cs.glsl  h_k_t_cs.glsl  inversion_cs.glsl  normal_map_cs.glsl  ocean.fs  ocean.vs  ocean_fs.glsl  ocean_vs.glsl  skybox_fs.glsl  skybox_vs.glsl  twiddle_factors.cs  twiddle_factors_cs.glsl
shaders/triangle/: frag.fs  vert.vs
src/: Main.cpp  buffers.cpp  camera.cpp  fft.cpp  main.cpp  ocean.cpp  resourceLoader.cpp  resourceManager.cpp  shader.cpp  skybox.cpp  texture.cpp  textureStorage.cpp  window.cpp
src/core/: Application.cpp  Input.cpp  Ocean.cpp  ResourceLoader.cpp  Window.cpp
src/graphics/: Camera.cpp  EBuffer.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  VArray.cpp  VBuffer.cpp
src/logger/: Logger.cpp  logger.cpp
